# lab04

./: CMakeLists.txt  README.md
.github/workflows/: classroom.yml
include/: csc232.h  csc232_test_utils.h
src/main/cpp/: demo.cpp  main.cpp
src/test/cpp/: task1_test.cpp  task2_test.cpp  task3_test.cpp
